--- a/build-QtTcpClientConsumer-Desktop_Qt_5_11_2_MinGW_32bit-Debug/Makefile
+++ b/build-QtTcpClientConsumer-Desktop_Qt_5_11_2_MinGW_32bit-Debug/Makefile
@@ -105,10 +105,14 @@ Makefile: ../QtTcpClientConsumer/QtTcpClientConsumer.pro C:/Qt/Qt5.11.2/5.11.2/m
 		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_bluetooth.pri \
 		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_bluetooth_private.pri \
 		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_bootstrap_private.pri \
+		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_charts.pri \
+		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_charts_private.pri \
 		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_concurrent.pri \
 		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_concurrent_private.pri \
 		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_core.pri \
 		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_core_private.pri \
+		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_datavisualization.pri \
+		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_datavisualization_private.pri \
 		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_dbus.pri \
 		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_dbus_private.pri \
 		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_designer.pri \
@@ -134,6 +138,8 @@ Makefile: ../QtTcpClientConsumer/QtTcpClientConsumer.pro C:/Qt/Qt5.11.2/5.11.2/m
 		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_multimediawidgets_private.pri \
 		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_network.pri \
 		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_network_private.pri \
+		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_networkauth.pri \
+		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_networkauth_private.pri \
 		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_nfc.pri \
 		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_nfc_private.pri \
 		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_opengl.pri \
@@ -148,6 +154,8 @@ Makefile: ../QtTcpClientConsumer/QtTcpClientConsumer.pro C:/Qt/Qt5.11.2/5.11.2/m
 		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_positioningquick_private.pri \
 		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_printsupport.pri \
 		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_printsupport_private.pri \
+		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_purchasing.pri \
+		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_purchasing_private.pri \
 		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_qml.pri \
 		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_qml_private.pri \
 		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_qmldebug_private.pri \
@@ -163,6 +171,14 @@ Makefile: ../QtTcpClientConsumer/QtTcpClientConsumer.pro C:/Qt/Qt5.11.2/5.11.2/m
 		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_quicktemplates2_private.pri \
 		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_quickwidgets.pri \
 		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_quickwidgets_private.pri \
+		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_remoteobjects.pri \
+		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_remoteobjects_private.pri \
+		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_repparser.pri \
+		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_repparser_private.pri \
+		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_script.pri \
+		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_script_private.pri \
+		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_scripttools.pri \
+		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_scripttools_private.pri \
 		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_scxml.pri \
 		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_scxml_private.pri \
 		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_sensors.pri \
@@ -200,6 +216,7 @@ Makefile: ../QtTcpClientConsumer/QtTcpClientConsumer.pro C:/Qt/Qt5.11.2/5.11.2/m
 		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/features/qt_config.prf \
 		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/win32-g++/qmake.conf \
 		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/features/spec_post.prf \
+		.qmake.stash \
 		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/features/exclusive_builds.prf \
 		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/features/toolchain.prf \
 		C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/features/default_pre.prf \
@@ -273,10 +290,14 @@ C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_axserver_private.pri:
 C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_bluetooth.pri:
 C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_bluetooth_private.pri:
 C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_bootstrap_private.pri:
+C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_charts.pri:
+C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_charts_private.pri:
 C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_concurrent.pri:
 C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_concurrent_private.pri:
 C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_core.pri:
 C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_core_private.pri:
+C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_datavisualization.pri:
+C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_datavisualization_private.pri:
 C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_dbus.pri:
 C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_dbus_private.pri:
 C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_designer.pri:
@@ -302,6 +323,8 @@ C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_multimediawidgets.pri:
 C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_multimediawidgets_private.pri:
 C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_network.pri:
 C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_network_private.pri:
+C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_networkauth.pri:
+C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_networkauth_private.pri:
 C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_nfc.pri:
 C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_nfc_private.pri:
 C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_opengl.pri:
@@ -316,6 +339,8 @@ C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_positioningquick.pri:
 C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_positioningquick_private.pri:
 C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_printsupport.pri:
 C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_printsupport_private.pri:
+C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_purchasing.pri:
+C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_purchasing_private.pri:
 C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_qml.pri:
 C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_qml_private.pri:
 C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_qmldebug_private.pri:
@@ -331,6 +356,14 @@ C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_quickparticles_private.p
 C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_quicktemplates2_private.pri:
 C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_quickwidgets.pri:
 C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_quickwidgets_private.pri:
+C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_remoteobjects.pri:
+C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_remoteobjects_private.pri:
+C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_repparser.pri:
+C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_repparser_private.pri:
+C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_script.pri:
+C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_script_private.pri:
+C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_scripttools.pri:
+C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_scripttools_private.pri:
 C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_scxml.pri:
 C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_scxml_private.pri:
 C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/modules/qt_lib_sensors.pri:
@@ -368,6 +401,7 @@ C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/features/qt_functions.prf:
 C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/features/qt_config.prf:
 C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/win32-g++/qmake.conf:
 C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/features/spec_post.prf:
+.qmake.stash:
 C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/features/exclusive_builds.prf:
 C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/features/toolchain.prf:
 C:/Qt/Qt5.11.2/5.11.2/mingw53_32/mkspecs/features/default_pre.prf:
